Use visibility controls to prevent double play
Previously if you were fast you could get two videos to play at once. These visibility controls prevent that from happening.

--- a/web/css/watch.css
+++ b/web/css/watch.css
@@ -50,6 +50,7 @@ html.video-done {
     position: absolute;
     height: 100%;
     width: 100%;
+    visibility: hidden;
 }
 
 #overlay.ios {
